# OpenHuFu

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.en.md  README.md  checkstyle.xml  package-lock.json  package.sh  pom.xml  test.sh
aby4j/: package.sh  pom.xml
aby4j/swig/: CMakeLists.txt
aby4j/swig/src/: CMakeLists.txt
aby4j/swig/src/aby4j/: CMakeLists.txt  aby4j_party.cpp  aby4j_party.h  aby4j_party.i
adapter/: pom.xml
adapter-csv/: pom.xml
adapter-json/: pom.xml
adapter-mysql/: pom.xml
adapter-postgis/: README.md  pom.xml
adapter-postgresql/: pom.xml
adapter-sqlite/: pom.xml
application/: pom.xml
backend/: pom.xml
benchmark/: benchmark.sh  pom.xml
client/: pom.xml
common/: pom.xml
core/: pom.xml
coverage/: pom.xml
data/: pom.xml
database/: docker-compose.yml
dataset/: genSyntheticData.py  newyork-taxi-sample.data
desensitize/: pom.xml
doc/: README_CN.md  api.md
docker/: Dockerfile  init_deploy.sh  restart_owner.sh
docker-hive-test/: docker-compose.yml  hadoop-hive.env
dp/: pom.xml
hufu-core/: pom.xml  start.sh
hufu-docs/: CLIConfig.md  DriverConfig.md
hufu-driver-core/: pom.xml
hufu-evaluation/: pom.xml
hufu-geomesa-driver/: pom.xml  start.sh
hufu-mysql-driver/: pom.xml
hufu-postgresql-driver/: pom.xml  start.sh
hufu-simba-driver/: pom.xml  start.sh
hufu-spatialhadoop-driver/: pom.xml  start.sh
hufu-spatialite-driver/: pom.xml
mpc/: pom.xml
mpc-chart/: Chart.yaml  values.yaml
owner/: pom.xml
owner-core/: pom.xml
owner-mysql/: pom.xml
owner-postgresql/: pom.xml
persistence/: pom.xml
plan/: pom.xml
rpc/: pom.xml
(+10168 files in other folders)
