cmake_minimum_required(VERSION 3.16)
project(LIBABY LANGUAGES CXX)
cmake_policy(SET CMP0077 NEW)

add_compile_options(-fPIC)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

find_package(Java REQUIRED COMPONENTS Development)
find_package(JNI REQUIRED)
find_package(SWIG REQUIRED)
include(UseSWIG)
find_package(ABY QUIET)
if(ABY_FOUND)
    message(STATUS "Found ABY")
elseif (NOT ABY_FOUND AND NOT TARGET ABY::aby)
    message("ABY was not found: add ABY subdirectory")
    add_subdirectory(extern/ABY)
endif()

add_subdirectory(src)